src/Interop/Llvm.NET.Interop/libllvm-c/PassManagerBindings.cs

// ------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     Runtime Version: 2.17941.31104.49410
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
// ------------------------------------------------------------------------------

using System.CodeDom.Compiler;
using System.Runtime.InteropServices;
using System.Security;

namespace Llvm.NET.Interop
{
    public static partial class NativeMethods
    {
        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMAddAddressSanitizerFunctionPass"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMAddAddressSanitizerFunctionPass( LLVMPassManagerRef PM );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMAddAddressSanitizerModulePass"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMAddAddressSanitizerModulePass( LLVMPassManagerRef PM );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMAddThreadSanitizerPass"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMAddThreadSanitizerPass( LLVMPassManagerRef PM );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMAddMemorySanitizerPass"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMAddMemorySanitizerPass( LLVMPassManagerRef PM );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMAddDataFlowSanitizerPass"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMAddDataFlowSanitizerPass( LLVMPassManagerRef PM, int ABIListFilesNum, [MarshalAs( UnmanagedType.LPStr, ArraySubType = UnmanagedType.LPStr )]global::System.String[] ABIListFiles );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMCreatePassRegistry"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern LLVMPassRegistryRef LibLLVMCreatePassRegistry(  );

        /// <include file="PassManagerBindings.xml" path='LibLLVMAPI/Function[@name="LibLLVMPassRegistryDispose"]/*' />
        [SuppressUnmanagedCodeSecurity]
        [DllImport( LibraryPath, CallingConvention=global::System.Runtime.InteropServices.CallingConvention.Cdecl )]
        public static extern void LibLLVMPassRegistryDispose( LLVMPassRegistryRef passReg );

    }
}
